add new website from server na

--- a/xem-phim-bo/luu-thuy-dieu-dieu/index.html
+++ b/xem-phim-bo/luu-thuy-dieu-dieu/index.html
@@ -1190,7 +1190,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             27
+             28
             </dd>
             <br/>
            </dl>
@@ -1660,18 +1660,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/masha-va-ban-gau-phan-2" title="Masha và bạn Gấu (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/sherlock-holmes" title="Sherlock Holmes">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/masha-va-ban-gau-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sherlock-holmes-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Masha và bạn Gấu (Phần 2)
+             Sherlock Holmes
             </span>
             <span class="list-top-movie-item-en">
-             Masha and the Bear (Season 2)
+             Sherlock Holmes
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/terrace-house-tieu-bang-aloha-phan-1" title="Terrace House: Tiểu bang Aloha (Phần 1)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/terrace-house-tieu-bang-aloha-phan-1-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Terrace House: Tiểu bang Aloha (Phần 1)
+            </span>
+            <span class="list-top-movie-item-en">
+             Terrace House: Aloha State (Season 1)
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1682,40 +1704,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bien-chuyen-cua-su-song-hanh-trinh-xuyen-thoi-gian" title="Biến Chuyển Của Sự Sống: Hành Trình Xuyên Thời Gian">
+          <a class="list-top-movie-link" href="/phim-moi/lien-minh-cong-ly-tham-hoa-giua-hai-trai-dat" title="Liên Minh Công Lý: Thảm Họa Giữa Hai Trái Đất">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bien-chuyen-cua-su-song-hanh-trinh-xuyen-thoi-gian-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lien-minh-cong-ly-tham-hoa-giua-hai-trai-dat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Biến Chuyển Của Sự Sống: Hành Trình Xuyên Thời Gian
+             Liên Minh Công Lý: Thảm Họa Giữa Hai Trái Đất
             </span>
             <span class="list-top-movie-item-en">
-             Voyage Of Time: Life's Journey
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/truyen-thuyet-ve-change" title="Truyền thuyết về Chang”e">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truyen-thuyet-ve-change-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Truyền thuyết về Chang”e
-            </span>
-            <span class="list-top-movie-item-en">
-             Legend of Chang''e
+             Justice League: Crisis on Two Earths
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1726,21 +1726,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/loi-thu-toi-cua-sat-nhan" title="Lời Thú Tội Của Sát Nhân">
+          <a class="list-top-movie-link" href="/phim-moi/chico-bon-bon-chu-khi-va-that-lung-do-nghe-phan-3" title="Chico Bon Bon: Chú khỉ và thắt lưng đồ nghề (Phần 3)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/loi-thu-toi-cua-sat-nhan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chico-bon-bon-chu-khi-va-that-lung-do-nghe-phan-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lời Thú Tội Của Sát Nhân
+             Chico Bon Bon: Chú khỉ và thắt lưng đồ nghề (Phần 3)
             </span>
             <span class="list-top-movie-item-en">
-             Confessions Of A Dangerous Mind
+             Chico Bon Bon: Monkey with a Tool Belt (Season 3)
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1748,21 +1748,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/so-kiem-soat-ma-thuat-bi-mat" title="Sở kiểm soát ma thuật bí mật">
+          <a class="list-top-movie-link" href="/phim-moi/dead-in-tombstone" title="Dead in Tombstone">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/so-kiem-soat-ma-thuat-bi-mat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dead-in-tombstone-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sở kiểm soát ma thuật bí mật
+             Dead in Tombstone
             </span>
             <span class="list-top-movie-item-en">
-             Secret Magic Control Agency
+             Dead in Tombstone
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
