add new website from server na

--- a/xem-phim-bo/huyen-nhac-sam-lam/index.html
+++ b/xem-phim-bo/huyen-nhac-sam-lam/index.html
@@ -1190,7 +1190,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             10
+             11
             </dd>
             <br/>
            </dl>
@@ -1726,18 +1726,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ba-bo-truong-phan-4" title="Bà Bộ Trưởng (Phần 4)">
+          <a class="list-top-movie-link" href="/phim-moi/vuot-bien" title="Vượt Biên">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ba-bo-truong-phan-4-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vuot-bien-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bà Bộ Trưởng (Phần 4)
+             Vượt Biên
             </span>
             <span class="list-top-movie-item-en">
-             Madam Secretary (Season 4)
+             Border Run
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1748,21 +1748,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sieu-nhi-astro" title="Siêu nhí Astro">
+          <a class="list-top-movie-link" href="/phim-moi/do-linh-nhan-2" title="Độ linh nhân 2">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sieu-nhi-astro-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/do-linh-nhan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Siêu nhí Astro
+             Độ linh nhân 2
             </span>
             <span class="list-top-movie-item-en">
-             Astro Boy
+             Soul Hunter 2
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             5 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1770,40 +1770,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bang-cuop-song-bac" title="Băng Cướp Sòng Bạc">
+          <a class="list-top-movie-link" href="/phim-moi/treme-phan-2" title="Treme (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bang-cuop-song-bac-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/treme-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Băng Cướp Sòng Bạc
+             Treme (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             Heist
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/frieren-phap-su-tien-tang" title="Frieren – Pháp Sư Tiễn Táng">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/frieren-phap-su-tien-tang-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Frieren – Pháp Sư Tiễn Táng
-            </span>
-            <span class="list-top-movie-item-en">
-             Frieren: Beyond Journey's End
+             Treme (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1814,21 +1792,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vuong-quoc-loai-ech-2" title="Vương Quốc Loài Ếch 2">
+          <a class="list-top-movie-link" href="/phim-moi/ky-uc-sat-nhan" title="Ký Ức Sát Nhân">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vuong-quoc-loai-ech-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ky-uc-sat-nhan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vương Quốc Loài Ếch 2
+             Ký Ức Sát Nhân
             </span>
             <span class="list-top-movie-item-en">
-             The Frog Kingdom 2: Sub-Zero Mission
+             Gapdong: Memories of Murder
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/chiem-huu" title="Chiếm hữu">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chiem-huu-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Chiếm hữu
+            </span>
+            <span class="list-top-movie-item-en">
+             Only Mine
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
