add new website from server na

--- a/xem-phim-bo/tru-nuong-cuoi-cung/index.html
+++ b/xem-phim-bo/tru-nuong-cuoi-cung/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1769,62 +1769,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/saw-iv" title="Saw IV">
+          <a class="list-top-movie-link" href="/phim-moi/tot-cung-so-hai" title="Tột Cùng Sợ Hãi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/saw-iv-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tot-cung-so-hai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Saw IV
+             Tột Cùng Sợ Hãi
             </span>
             <span class="list-top-movie-item-en">
-             Saw IV
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phu-ta-phan-2" title="Phụ Tá (Phần 2)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phu-ta-phan-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Phụ Tá (Phần 2)
-            </span>
-            <span class="list-top-movie-item-en">
-             Chief of Staff (Season 2)
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tieu-ma-dau-lo-tay-roi" title="Tiểu Ma Đầu Lộ Tẩy Rồi!">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tieu-ma-dau-lo-tay-roi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tiểu Ma Đầu Lộ Tẩy Rồi!
-            </span>
-            <span class="list-top-movie-item-en">
-             BUSTED! DARKLORD
+             Primal Fear
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1835,18 +1791,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dap-kajaki" title="Đập Kajaki">
+          <a class="list-top-movie-link" href="/phim-moi/con-lac-dong-ho" title="Con Lắc Đồng Hồ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dap-kajaki-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/con-lac-dong-ho-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đập Kajaki
+             Con Lắc Đồng Hồ
             </span>
             <span class="list-top-movie-item-en">
-             Kajaki
+             Furiko
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1857,21 +1813,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ho-so-bo-nong" title="Hồ Sơ Bồ Nông">
+          <a class="list-top-movie-link" href="/phim-moi/tai-lieu-kashmir" title="Tài Liệu Kashmir">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ho-so-bo-nong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tai-lieu-kashmir-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hồ Sơ Bồ Nông
+             Tài Liệu Kashmir
             </span>
             <span class="list-top-movie-item-en">
-             The Pelican Brief
+             The Kashmir Files
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/cua-ro-trung-hoc-phan-4" title="Cua-rơ trung học (Phần 4)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cua-ro-trung-hoc-phan-4-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Cua-rơ trung học (Phần 4)
+            </span>
+            <span class="list-top-movie-item-en">
+             Yowamushi Pedal (Season 4)
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/dinh-thu-quy-am" title="Dinh Thự Quỷ Ám">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dinh-thu-quy-am-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Dinh Thự Quỷ Ám
+            </span>
+            <span class="list-top-movie-item-en">
+             Marrowbone
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
